required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- AGG: fixed incorrect rendering of pixmaps on MSB architectures (#2235)

- Added layer.getFeature() in PHP MapScript with optional tileindex arg, 
  and deprecated layer.getShape() to match what we had in SWIG (#900)


Version 5.0.0-beta4 (2007-08-15)
--------------------------------

- Updated msImageCreateAGG to only allow RGB or RGBA pixel models (#2231)

- Fixed problem with symbol.setImagePath() when file doesn't exist (#1962)

- Python MapScript failures (#2230)

- msInsertLayer should not free the incoming layer anymore (#2229)

- Include only parsed in the first mapfile (#2021)

- Incorrect lookup of symbol in symbolset (#2227)

- Mapfile includes and MapScript (#2089)

- Fixed alignment of GetLegendGraphic output when mapfile contains no 
  legend object (#966)

- Fixed seg. fault when generaing HTML legend for raster layers with no
  classes (#2228). The same issue was also causing several Chameleon apps
  using HTML legend to seg fault (#2218)

- Do not use case sensitive searches in string2list, which is used
  for msWhichItems (#2067)

- Ensure that we can write AGG images with Python MapScript's write() method

- Support unicode attributes for ArcSDE 9.2 and above (#2225)

- GD: Truetype line symbolization should follow line orientation only
  if GAP is <=0

- AGG: Added truetype symbolization for lines and polygons

- AGG: Draw an outline of size 1 of the fill color around polygons if an
  outlinecolor isn't specified (avoids faint outline) 

- Added summary of options at end of configure output (#1966)

- Updated configure script to detect and require GEOS 2.2.2+ (#1896)
